2013-09-20  Ryosuke Niwa  <rniwa@webkit.org>

        Bad cast from CSSInitialValue to CSSValueList
        https://bugs.webkit.org/show_bug.cgi?id=121729

        Reviewed by Beth Dakin.

        Merge https://chromium.googlesource.com/chromium/blink/+/fcfaa51f9207b32cffe751c1a1380a921e464cbb

        The issue was that we would cast to CSSValueList without checking
        the type of the CSSValue. After this change, we use the ASSERT'ing
        cast and explicitly check the type of the CSSValue before the cast.

        Test: fast/css/crash-inherit-value-font-family.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseFontFaceValue):

2013-09-20  Zoltan Horvath  <zoltan@webkit.org>

        Remove includes from LineWidth.h
        https://bugs.webkit.org/show_bug.cgi?id=121716

        Reviewed by Darin Adler.

        In r156197 I removed logicalLineHeight from LineWidth.h, so we don't need to include RenderBlock.h
        and RenderRubyRun.h anymore in LineWidth.h.

        No new tests, no behavior change.

        * rendering/LineWidth.cpp:
        * rendering/LineWidth.h:

2013-09-20  Roger Fong  <roger_fong@apple.com>

        Handle panning gestures messages properly on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=121711.

        Reviewed by Brent Fulgham.

        This is needed by the Windows port to keep track to determine whether or not
        we need to overpan.

        No new functionality added.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollByRecursively):
        * rendering/RenderLayer.h: 
        Added an argument to keep track of which scrollview was actually scrolled

2013-09-20  Alexandru Chiculita  <achicu@adobe.com>

        Web Inspector: [CSS Regions] Display CSS Regions chain when highlighting a CSS Region node
        https://bugs.webkit.org/show_bug.cgi?id=121719

        Reviewed by Joseph Pecoraro.

        Test: inspector/elements/highlight-node-regions.html
